--- a/views/centros/index.ejs
+++ b/views/centros/index.ejs
@@ -55,7 +55,7 @@
             if (session.user.isSuperAdmin) {%>
                 <ul class="tira_botones">
 					<li><a class="btn btn_gral" href="/centros/new">
-						Crear Centro
+						<i class="fa fa-plus" alt=""></i> Crear Centro
 					</a></li>
 				</ul>
             <%}%>
