--- a/views/contactos/index.ejs
+++ b/views/contactos/index.ejs
@@ -50,7 +50,8 @@
 
 	<% if (session.user.isAdmin) { %>
 		<p><a href="/contactos/new"><button type="button" class="btn btn-primary">
-			<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Crear Contacto</button></a></p>
-	<% } %>
+			<i class="fa fa-plus" alt=""></i> Crear Contacto</button></a>
+		</p>
+	<%}%>
 
 </div>
