--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -97,9 +97,9 @@
 						<a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					    	<img src="/images/consumos2.png" alt="" /> Siloes
 					  	</a>
-					  	<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-							<a class="dropdown-item animated fadeIn" href="/siloes/resumen_index_vaso"><img src="/images/vasos.png" alt="" /> Vaso</a><br>
-							<a class="dropdown-item animated fadeIn" href="/siloes/resumen_index"><img src="/images/excel.png" alt="" /> Excel</a><br>
+					  	<div class="dropdown-menu animated fadeIn" aria-labelledby="dropdownMenuLink">
+							<a class="dropdown-item" href="/siloes/resumen_index_vaso"><img src="/images/vasos.png" alt="" /> Vaso</a><br>
+							<a class="dropdown-item" href="/siloes/resumen_index"><img src="/images/excel.png" alt="" /> Excel</a><br>
 					  	</div>
 				  	</li>
 
