--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -109,7 +109,7 @@
 
 
 					<li><a class="btn btn_gral" href="/quizes/new">
-						➕ Crear Parte
+						<i class="fa fa-plus" alt=""></i> Crear Parte
 					</a></li>
 
 
