--- a/views/quizes/resumen.ejs
+++ b/views/quizes/resumen.ejs
@@ -197,4 +197,11 @@
     </div>
 
 
+    <% if (imprimir) {%>
+        <script type="text/javascript">
+            window.print();
+        </script>
+    <%}%>
+
+
 </div>
