--- a/views/siloes/index.ejs
+++ b/views/siloes/index.ejs
@@ -94,7 +94,7 @@
 
 
 			<li><a class="btn btn_gral" href="/siloes/new">
-				➕ Crear Parte
+				<i class="fa fa-plus" alt=""></i> Crear Parte
 			</a></li>
 
 
@@ -109,6 +109,6 @@
 	<% } %>
 
 	<br>
-	
+
 
 </div>
