--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -58,7 +58,7 @@
                 <ul class="tira_botones">
 
 					<li><a class="btn btn_gral" href="/user/new">
-					    ➕ Crear Usuario
+					    <i class="fa fa-plus" alt=""></i> Crear Usuario
 					</a></li>
 
 				</ul>
@@ -66,5 +66,5 @@
         <%}%>
 
         <br>
-        
+
     </div>
