--- a/views/quizes/resumen_index.ejs
+++ b/views/quizes/resumen_index.ejs
@@ -18,8 +18,8 @@
 
 
             <div class="form-group">
-        		<label for="mes" class="col-sm-2">Mes:</label>
-        		<div class="col-sm-10">
+        		<label for="mes" class="col-md-3 col-sm-3 col-xs-3 control-label">Mes:</label>
+        		<div class="col-md-9 col-sm-9 col-xs-9">
         			<select class="form-control" id="mes" name="resumen[mes]">
 
                         <option value=1 <%if (resumen.mes===1) {%> selected <%}%>>Enero</option>
@@ -43,8 +43,8 @@
 
 
             <div class="form-group">
-        		<label for="anio" class="col-sm-2">Año:</label>
-        		<div class="col-sm-10">
+        		<label for="anio" class="col-md-3 col-sm-3 col-xs-3 control-label">Año:</label>
+        		<div class="col-md-9 col-sm-9 col-xs-9">
         			<select class="form-control" id="anio" name="resumen[anio]">
 
         				<option value=2015 <%if (resumen.anio===2015) {%> selected <%}%>>2015</option>
@@ -59,27 +59,17 @@
         	</div>
 
 
-
-
-
-
-
-
-
-
-<!--             <div class="form-group">
-                <label for="anio" class="col-sm-2">Año:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="anio" name="resumen[anio]" value="<%= resumen.anio %>" placeholder="año"/>
+            <div class="form-group form-check">
+                <label for="imprimir" class="col-md-3 col-sm-3 col-xs-3 form-check-label">Imprimir:</label>
+                <div class="col-md-9 col-sm-9 col-xs-9">
+                    <input type="checkbox" class="form-check-input" id="imprimir" name="resumen[imprimir]" value="<%= resumen.imprimir %>" />
                 </div>
-            </div> -->
-
-            <div class="form-group text-center">
-
-                    <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Ver resumen</button>
-
             </div>
 
+
+            <div class="form-group text-center">
+                <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Ver resumen</button>
+            </div>
 
 
         </form>
