--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,6 +19,7 @@
 <!--	<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap-datepicker.css"/> -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/sweetalert2.css"/>
+	<link rel="stylesheet" type="text/css" href="/stylesheets/navbar.css"/>
 
 
 <!--	<link rel="stylesheet" type="text/css" href="/stylesheets/carousel.css"/>
@@ -86,7 +87,7 @@
 			<div class="collapse navbar-collapse animated fadeIn" id="menu-inicio-items">
 				<ul class="nav navbar-nav">
 
-					<li class="menu-inicio-item" style="background-color:#2E2E2E;"><a data-toggle="modal"data-target="#ver-mas-modal" style="color:#337ab7;">Supcounter ©️</a></li>
+					<li class="menu-inicio-item"><a data-toggle="modal"data-target="#ver-mas-modal" style="color:#337ab7;">Supcounter ©️</a></li>
 					<!-- <li><a href="/"><img src="/images/home.png" alt="" /> Inicio <span class="sr-only">(current)</span></a></li> -->
 					<li class="menu-inicio-item"><a href="/quizes"><img src="/images/partes3.png" alt="" /> Lecturas <span class="sr-only">(current)</span></a></li>
 					<li class="menu-inicio-item"><a href="/contadores"><img src="/images/contador2.png" alt="" /> Contadores </a></li>
@@ -116,7 +117,7 @@
 
 				</ul>
 
-<!--				<form class="navbar-form navbar-left" method="get" role="search" action="/quizes?search=search">
+				<!-- <form class="navbar-form navbar-left" method="get" role="search" action="/quizes?search">
 					<div class="form-group">
 						<input name="search" type="text" class="form-control" placeholder="Search">
 					</div>
@@ -143,7 +144,6 @@
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
-
 
 
 <%}%>
