--- a/views/siloes/resumen_index.ejs
+++ b/views/siloes/resumen_index.ejs
@@ -2,10 +2,11 @@
 
 <div class="container animated animated-fast fadeIn centrado-v-h margen_superior" id="resumen_index">
 
-    <div class="panel" style="border:none;">
+    <div class="" style="border:none;">
 
-        <h4>Siloe</h4>
-        <h6>Se descargará un archivo de formato Excel en su equipo con los resultados de todos los vasos del año selecionado.</h6>
+        <br>
+        <h4 class="text-center">Siloe</h4>
+        <h6 >Se descargará un archivo de formato Excel en su equipo con los resultados de todos los vasos del año selecionado.</h6>
         <br>
 
         <form class="form-horizontal" action="/siloes/<%= anio %>/excel" method="get">
@@ -34,6 +35,8 @@
 
             </div>
 
+
+            <br>
 
 
         </form>
