--- a/views/siloes/resumen_index_vaso_informe.ejs
+++ b/views/siloes/resumen_index_vaso_informe.ejs
@@ -1,5 +1,5 @@
 
-    <div class="container" id="informe_siloe">
+    <div class="container animated fadeIn" id="informe_siloe">
 
         <h4><img src="/images/consumos2.png" alt="" /> Informe Siloe del vaso <%= vaso.nombre %> - Año <%= anio %></h4>
         <br>
