--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -87,7 +87,7 @@
 			<div class="collapse navbar-collapse animated fadeIn" id="menu-inicio-items">
 				<ul class="nav navbar-nav">
 
-					<li class="menu-inicio-item"><a data-toggle="modal"data-target="#ver-mas-modal" style="color:#337ab7;">Supcounter ©️</a></li>
+					<li class="menu-inicio-item text-center"><a data-toggle="modal"data-target="#ver-mas-modal" style="color:#337ab7;">Supcounter ©️</a></li>
 					<!-- <li><a href="/"><img src="/images/home.png" alt="" /> Inicio <span class="sr-only">(current)</span></a></li> -->
 					<li class="menu-inicio-item"><a href="/quizes"><img src="/images/partes3.png" alt="" /> Lecturas <span class="sr-only">(current)</span></a></li>
 					<li class="menu-inicio-item"><a href="/contadores"><img src="/images/contador2.png" alt="" /> Contadores </a></li>
@@ -125,7 +125,7 @@
 				</form> -->
 
 				<ul class="nav navbar-nav navbar-right text-center">
-					<div class="form-group" style="color: white; font-size: 11px">
+					<div class="form-group">
 						<%if (!session.user) {%>
 							<a href="/login"><img src="/images/user2.png" alt=""> Login&nbsp;</a></li>
 						<%} else {%>
