--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -145,6 +145,43 @@
 		</div><!-- /.container-fluid -->
 	</nav>
 
+	<script type="text/javascript">
+
+		// $('.menu-inicio-item:nth-child(1)').click(function () {
+		// 	$('.menu-inicio-item:nth-child(1)').addClass('active');
+		// });
+		// $('ul li:nth-child(2)').click(function () {
+		// 	$('ul li:nth-child(2)').addClass('active');
+		// });
+		// $('.menu-inicio-item:nth-child(3)').click(function () {
+		// 	$('.menu-inicio-item:nth-child(3)').addClass('active');
+		// });
+		// $('.menu-inicio-item:nth-child(4)').click(function () {
+		// 	$('.menu-inicio-item:nth-child(4)').addClass('active');
+		// });
+		// $('.menu-inicio-item:nth-child(5)').click(function () {
+		// 	$('.menu-inicio-item:nth-child(5)').addClass('active');
+		// });
+		// $('.menu-inicio-item:nth-child(6)').click(function () {
+		// 	$('.menu-inicio-item:nth-child(6)').addClass('active');
+		// });
+		// $('.menu-inicio-item:nth-child(7)').click(function () {
+		// 	$('.menu-inicio-item:nth-child(7)').addClass('active');
+		// });
+		// $('.menu-inicio-item:nth-child(8)').click(function () {
+		// 	$('.menu-inicio-item:nth-child(8)').addClass('active');
+		// });
+
+		// if () {
+		// 	$('.alerta-cookies').removeClass('animated bounceInLeft');
+		// 	$('.alerta-cookies').toggleClass('animated bounceOutLeft');
+		// 	aviso_cookies = false;
+		// };
+
+
+
+	</script>
+
 
 <%}%>
 
