--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -12,8 +12,6 @@
         position: absolute;
         z-index: 3;
         font-size: 15px;
-
-
     }
 
     #menu-inicio img {
@@ -31,13 +29,13 @@
       line-height: 28px;
     }
 
-    .navbar .navbar-nav > li.active {
+    /*.navbar .navbar-nav > li.active {
       color: #f8f8f8;
       background-color: #080808;
       box-shadow: inset 0px -28px 23px -21px rgba(255, 255, 255, 0.15);
       border-left: 1px solid #2A2A2A;
       border-right: 1px solid #272727;
-    }
+    }*/
 
 
     .navbar-nav > li > .dropdown-menu {
@@ -50,21 +48,31 @@
 
 
     .navbar-toggle {									/* estilos boton toggle del menu-inicio */
-
-
 		width: 47px;
 		height: 46px;
         padding: 5px 5px 5px 12px;
 		background-color: rgba(0, 0, 0, 1);
 		top: 0px;
-
 	}
 
 
     .navbar-right {
-
         font-size: 10px
     }
+
+
+    .navbar-inverse .navbar-nav > li > a:focus,
+    .navbar-inverse .navbar-nav > li > a:hover,
+    .navbar-inverse .navbar-nav > li > a:active {
+
+        color: #eb9837;
+
+
+    }
+
+
+
+
 
 
     /* ========================================================================================================== */
@@ -75,23 +83,45 @@
 
 
 
+
+        #menu-inicio {
+
+            /*position: fixed;*/
+
+    	}
+        .menu-inicio-item:nth-child(1) {
+            border-bottom: 1px solid #424242;
+        }
+        .menu-inicio-item:nth-child(2) {
+            border-bottom: 1px solid #424242;
+        }
+        .menu-inicio-item:nth-child(3) {
+            border-bottom: 1px solid #424242;
+        }
+        .menu-inicio-item:nth-child(4) {
+            border-bottom: 1px solid #424242;
+        }
+        .menu-inicio-item:nth-child(5) {
+            border-bottom: 1px solid #424242;
+        }
+        .menu-inicio-item:nth-child(6) {
+            border-bottom: 1px solid #424242;
+        }
+        .menu-inicio-item:nth-child(7) {
+            border-bottom: 1px solid #424242;
+        }
+        .menu-inicio-item:nth-child(8) {
+            border-bottom: 1px solid #424242;
+        }
+
+
+
+
+
         .navbar.navbar-inverse {
             /*position: absolute;*/
             /*background: url(/images/logos/logo_7islas.jpg) no-repeat top center;*/
             border-radius: 5px;
-
-
-
-            /*background: rgba(76,76,76,1);
-            background: -moz-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 5%, rgba(102,102,102,1) 8%, rgba(71,71,71,1) 18%, rgba(44,44,44,1) 28%, rgba(0,0,0,1) 47%, rgba(19,19,19,1) 100%);
-            background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(76,76,76,1)), color-stop(5%, rgba(89,89,89,1)), color-stop(8%, rgba(102,102,102,1)), color-stop(18%, rgba(71,71,71,1)), color-stop(28%, rgba(44,44,44,1)), color-stop(47%, rgba(0,0,0,1)), color-stop(100%, rgba(19,19,19,1)));
-            background: -webkit-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 5%, rgba(102,102,102,1) 8%, rgba(71,71,71,1) 18%, rgba(44,44,44,1) 28%, rgba(0,0,0,1) 47%, rgba(19,19,19,1) 100%);
-            background: -o-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 5%, rgba(102,102,102,1) 8%, rgba(71,71,71,1) 18%, rgba(44,44,44,1) 28%, rgba(0,0,0,1) 47%, rgba(19,19,19,1) 100%);
-            background: -ms-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 5%, rgba(102,102,102,1) 8%, rgba(71,71,71,1) 18%, rgba(44,44,44,1) 28%, rgba(0,0,0,1) 47%, rgba(19,19,19,1) 100%);
-            background: linear-gradient(to bottom, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 5%, rgba(102,102,102,1) 8%, rgba(71,71,71,1) 18%, rgba(44,44,44,1) 28%, rgba(0,0,0,1) 47%, rgba(19,19,19,1) 100%);
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313', GradientType=0 );*/
-
-
             background: rgba(76,76,76,1);
             background: -moz-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(102,102,102,1) 0%, rgba(89,89,89,1) 2%, rgba(71,71,71,1) 18%, rgba(44,44,44,1) 28%, rgba(0,0,0,1) 47%, rgba(19,19,19,1) 100%);
             background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(76,76,76,1)), color-stop(0%, rgba(102,102,102,1)), color-stop(2%, rgba(89,89,89,1)), color-stop(18%, rgba(71,71,71,1)), color-stop(28%, rgba(44,44,44,1)), color-stop(47%, rgba(0,0,0,1)), color-stop(100%, rgba(19,19,19,1)));
@@ -100,9 +130,6 @@
             background: -ms-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(102,102,102,1) 0%, rgba(89,89,89,1) 2%, rgba(71,71,71,1) 18%, rgba(44,44,44,1) 28%, rgba(0,0,0,1) 47%, rgba(19,19,19,1) 100%);
             background: linear-gradient(to bottom, rgba(76,76,76,1) 0%, rgba(102,102,102,1) 0%, rgba(89,89,89,1) 2%, rgba(71,71,71,1) 18%, rgba(44,44,44,1) 28%, rgba(0,0,0,1) 47%, rgba(19,19,19,1) 100%);
             filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313', GradientType=0 );
-
-
-
         }
 
 
@@ -124,6 +151,8 @@
             background: linear-gradient(to bottom, rgba(76,76,76,1) 0%, rgba(102,102,102,1) 0%, rgba(89,89,89,1) 2%, rgba(71,71,71,1) 18%, rgba(44,44,44,1) 28%, rgba(0,0,0,1) 47%, rgba(19,19,19,1) 100%);
             filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313', GradientType=0 );*/
         }
+
+
 
 
 
