--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 	</div>
 
 
-	<div class="container-fluid bordes animated fadeIn" id="inicio">
+	<div class="container-fluid animated fadeIn" id="inicio">
 
 <!--		<img src="/images/inicio/09.jpg" > -->
 
