--- a/views/contadores/show.ejs
+++ b/views/contadores/show.ejs
@@ -2,18 +2,41 @@
 <div class="container animated animated-fast fadeIn margen_superior">
 
 	<div class="row">
-		<h5>Contador nº: <strong><%= contador.id %> </strong></h5>
-		<h5>Nombre: <strong><%= contador.nombre %> </strong></h5>
-		<h5>Depósito:
-			<strong>
-				<% if (contador.deposito) { %>
-					Sí
-				<%} else {%>
-					No
-				<%}%>
-			</strong>
-		</h5>
+
+		<div class="col-md-6 col-sm-6">
+
+			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_dcha">
+				<h5>Contador nº: </h5>
+			</div>
+			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_izda">
+				<h5><strong><%= contador.id %> </strong></h5>
+			</div>
+
+			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_dcha">
+				<h5>Nombre: </h5>
+			</div>
+			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_izda">
+				<h5><strong><%= contador.nombre %> </strong></h5>
+			</div>
+
+			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_dcha">
+				<h5>Depósito: </h5>
+			</div>
+			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_izda">
+				<h5><strong>
+					<% if (contador.deposito) { %>
+						Sí
+					<%} else {%>
+						No
+					<%}%>
+				</strong></h5>
+			</div>
+
+
+		</div>
 	</div>
+
+	<br>
 
 
 	<div class="container" id="panel_criterios">
@@ -21,51 +44,56 @@
 		<br>
 		<p><strong>Criterios:</strong></p>
 
-		<table class="table table-striped table-hover">
+		<div class="panel">
 
-			<thead>
-				<tr>
-					<th class="text-center">Mes</th>
-					<th class="text-center">Máximo</th>
-					<th class="text-center">Mínimo</th>
-				</tr>
-			</thead>
+			<table class="table table-striped table-hover">
 
-
-			<tbody>
-
-				<% for (var i in criterios) {%>
-
+				<thead>
 					<tr>
-
-						<td class="text-center"><a href="/contadores/<%= contador.id %>/criterios/<%= criterios[i].id %>/edit"><%= criterios[i].mes %></a></td>
-						<td class="text-center"><%= criterios[i].max %></td>
-						<td class="text-center"><%= criterios[i].min %></td>
-
-						<% if (session.user) {
-							if (session.user.isAdmin) {%>
-
-								<td style="width:40px"> <a class="" href="/contadores/<%= contador.id %>/criterios/<%= criterios[i].id %>/edit">
-									<img src="/images/edit3.png" style="width: 20px;"/>
-								</a></td>
-
-								<td style="width:40px">
-									<form method="post" action="/contadores/<%= contador.id %>/criterios/<%= criterios[i].id %>/destroy?_method=delete">
-										<button class="btn btn-danger btn-xs" type="submit" onClick="return confirm('Borrar el criterio mes: <%= criterios[i].mes %>');">
-											<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-										</button>
-									</form>
-								</td>
-							<%}%>
-						<%}%>
-
+						<th class="text-center">Mes</th>
+						<th class="text-center">Máximo</th>
+						<th class="text-center">Mínimo</th>
 					</tr>
+				</thead>
 
 
-				<%}%>
+				<tbody>
 
-			</tbody>
-		</table>
+					<% for (var i in criterios) {%>
+
+						<tr>
+
+							<td class="text-center"><a href="/contadores/<%= contador.id %>/criterios/<%= criterios[i].id %>/edit"><%= criterios[i].mes %></a></td>
+							<td class="text-center"><%= criterios[i].max %></td>
+							<td class="text-center"><%= criterios[i].min %></td>
+
+							<% if (session.user) {
+								if (session.user.isAdmin) {%>
+
+									<td style="width:40px"> <a class="" href="/contadores/<%= contador.id %>/criterios/<%= criterios[i].id %>/edit">
+										<img src="/images/edit3.png" style="width: 20px;"/>
+									</a></td>
+
+									<td style="width:40px">
+										<form method="post" action="/contadores/<%= contador.id %>/criterios/<%= criterios[i].id %>/destroy?_method=delete">
+											<button class="btn btn-danger btn-xs" type="submit" onClick="return confirm('Borrar el criterio mes: <%= criterios[i].mes %>');">
+												<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+											</button>
+										</form>
+									</td>
+								<%}%>
+							<%}%>
+
+						</tr>
+
+
+					<%}%>
+
+				</tbody>
+
+			</table>
+
+		</div>
 
 
 		<% if (session.user) {
@@ -78,7 +106,7 @@
 			<%}%>
 		<%}%>
 
-
+		<br>
 
 	</div>
 
