--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,18 +1,43 @@
 
 <div class="container animated animated-fast fadeIn margen_superior">
 
+	<div class="row">
 
-		<div class="form-group">
 
-			<h5>Parte nº: <strong><%= quiz.id %></strong></h5>
-			<h5>Fecha: <strong><%= quiz.dia %>-<%= quiz.mes %>-<%= quiz.anio %></strong></h5>
-			<h5>Usuario: <strong><%= quiz.UserName %></strong></h5>
-			<h5>Centro: <strong><%= quiz.centro %></strong></h5>
-<!--			<h4>Proveedor: <%= quiz.proveedor %> </h4>
-			<h4>Status: <%= quiz.proceso %> </h4> -->
+
+		<div class="col-md-6 col-sm-6">
+
+			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_dcha">
+				<h5>Parte nº: </h5>
+			</div>
+			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_izda">
+				<h5><strong><%= quiz.id %></strong></h5>
+			</div>
+
+			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_dcha">
+				<h5>Fecha: </h5>
+			</div>
+			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_izda">
+				<h5><strong><%= quiz.dia %>-<%= quiz.mes %>-<%= quiz.anio %></strong></h5>
+			</div>
+
+			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_dcha">
+				<h5>Usuario: </h5>
+			</div>
+			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_izda">
+				<h5><strong><%= quiz.UserName %></strong></h5>
+			</div>
+
+			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_dcha">
+				<h5>Centro: </h5>
+			</div>
+			<div class="col-md-6 col-sm-6 col-xs-6 alineacion_izda">
+				<h5><strong><%= quiz.centro %></strong></h5>
+			</div>
 
 		</div>
 
+	</div>
 
 
 	<div class="container comments">
